# folix

./: .gitignore  AGENTS.md  CAVEATS.md  Cargo.toml  README.md  build.rs  folix.db  issues.md  plan.md
docs/: sumatrapdf-comparison.md
patches/egui-winit/src/: lib.rs
src/: lib.rs  main.rs
src/app/: config.rs  i18n.rs  mod.rs
src/app/annotation/: engine.rs  mod.rs  overlay_renderer.rs  tool_system.rs
src/app/auto_reading/: controller.rs  glyph_reveal.rs  mod.rs  page_flow.rs  sentence_stream.rs
src/app/core/: app_state.rs  document_manager.rs  feature_system.rs  mod.rs  mode_system.rs  pdf_toolbox.rs  shortcuts.rs  text_layout.rs  text_layout_egui.rs
src/app/engines/: edit_operations.rs  image_engine.rs  mod.rs  pdf_engine.rs  pdf_operations.rs  reflow_engine.rs
src/app/interaction/: input_router.rs  mod.rs  mode_handlers.rs
src/app/layout/: glyph_cache.rs  line_breaker.rs  mod.rs  paginator.rs
src/app/paginator/: mod.rs
src/app/platform/: font_loader.rs  fs.rs  mod.rs
src/app/render/: mod.rs  overlay_compositor.rs  tile_cache.rs  wgpu_renderer.rs
src/app/services/: annotation_service.rs  bookmark.rs  mod.rs  search.rs  usage_tracker.rs
src/app/storage/: feature_store.rs  library_index.rs  mod.rs  sqlite.rs  sync_service.rs
src/app/ui/: feature_ui.rs  mod.rs  mode_ui.rs  pdf_toolbox.rs  shell.rs
src/iced_app/: home_page.rs  mod.rs  pdf_selection.rs  pdf_toolbox.rs  pdf_viewer.rs  reflow_selection.rs  reflow_viewer.rs  settings.rs  state.rs  tab_bar.rs
src/slint_app/: home_page.slint  main_window.slint  mod.rs  pdf_viewer.rs  pdf_viewer.slint  reflow_viewer.rs  reflow_viewer.slint  state.rs
tests/: Building AI Agent Platforms (Ben OMahony and Fabian Nonnenmacher) (z-library.sk, 1lib.sk, z-lib.sk).epub  epub_bench.rs  epub_test.rs  image_test.rs  pdf_operations_test.rs  pdf_test.rs  txt_test.rs  《我家老婆来自一千年前》（校对版全本）作者：花还没开.txt
