[package]
name = "folix"
version = "0.1.0"
edition = "2021"

[dependencies]
tikv-jemallocator = "0.6"
eframe = "0.31"
egui = "0.31"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
mupdf = { version = "0.8", default-features = false, features = ["base14-fonts"] }
rbook = "0.7"
image = "0.25"
zip = "2.2"
quick-xml = "0.37"
parking_lot = "0.12"
encoding_rs = "0.8"
rfd = "0.15"

[patch.crates-io]
egui-winit = { path = "patches/egui-winit" }

