[package]
name = "folix"
version = "0.1.0"
edition = "2021"

[features]
default = ["egui"]
egui = ["dep:eframe", "dep:egui"]
iced = ["dep:iced"]

[dependencies]
tikv-jemallocator = "0.6"
eframe = { version = "0.31", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "wayland",
    "x11",
    "accesskit",
], optional = true }
egui = { version = "0.31", optional = true }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
mupdf = { version = "0.8", default-features = false, features = ["base14-fonts"] }
rbook = "0.7"
image = "0.25"
zip = "2.2"
quick-xml = "0.37"
parking_lot = "0.12"
encoding_rs = "0.8"
rfd = "0.15"
iced = { version = "0.14.0", optional = true, default-features = false, features = ["wgpu", "image", "tokio", "x11", "wayland"] }

[patch.crates-io]
egui-winit = { path = "patches/egui-winit" }
